<resources>
    <string name="app_name">FindYourPeers</string>
    <string name="signup_button">Sign Up</string>
    <string name="login_button">Log In</string>
    <string name="create_profile_title">Create Profile</string>
    <string name="displayname_title">Display Name</string>
    <string name="coop_title">Currently on Co-op</string>
    <string name="yearstanding_title">Year Standing</string>
    <string name="my_profile">My Profile</string>
    <string-array name="year_standing">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <string-array name="coop_status">
        <item>Yes</item>
        <item>No</item>
    </string-array>

    <string name="find_course_here">Please Enter Your Course Name</string>
</resources>