<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center"
    tools:context=".CreateProfile">


    <TextView
        android:id="@+id/create_profile_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="45dp"
        android:gravity="center"
        android:text="@string/create_profile_title"
        android:textColor="@color/ubc_darkblue"
        android:textSize="30sp"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/display_name_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/create_profile_title"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="30dp"
        android:background="@color/white"
        android:drawableStart="@drawable/ic_baseline_account_circle_24"
        android:drawablePadding="20dp"
        android:hint="@string/displayname_title"
        android:inputType="text"
        android:padding="15dp"
        android:textColor="@color/ubc_darkblue"
        android:textColorHint="@color/dark_grey" />

    <TextView
        android:id="@+id/title_yearstanding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="1dp"
        android:gravity="left"
        android:text="@string/yearstanding_title"
        android:textColor="@color/dark_grey"
        android:textSize="15sp"
        android:layout_above="@id/spinner_yearstanding"/>

    <Spinner
        android:id="@+id/spinner_yearstanding"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/display_name_input"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/yearstanding_title" />

    <TextView
        android:id="@+id/title_coop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="1dp"
        android:gravity="left"
        android:text="@string/coop_title"
        android:textColor="@color/dark_grey"
        android:textSize="15sp"
        android:layout_above="@id/spinner_coop"/>

    <Spinner
        android:id="@+id/spinner_coop"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/spinner_yearstanding"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/coop_title" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/spinner_coop"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/ubc_darkblue"
        android:text="Register"
        android:textColor="@color/white" />


</RelativeLayout>
