<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center|center_horizontal"
    android:orientation="vertical"
    tools:context=".BrowseCourse"
    android:id="@+id/linearLayout">

    <TextView
        android:id="@+id/browse_course_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:layout_marginBottom="50dp"
        android:gravity="center"
        android:text="Browse Courses"
        android:textColor="@color/ubc_darkblue"
        android:textSize="34sp"
        tools:layout_conversion_absoluteHeight="32dp"
        tools:layout_conversion_absoluteWidth="162dp"
        tools:layout_editor_absoluteX="125dp"
        tools:layout_editor_absoluteY="270dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/edit_text_course"
            android:layout_width="600dp"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="i.e. CPEN 321"
            android:inputType="textPersonName"
            android:textColorHint="@color/dark_grey" />

        <ImageView
            android:id="@+id/dropdown_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="30dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_baseline_search_24" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/scroll_browse_course"
        android:layout_width="match_parent"
        android:layout_height="210dp"
        android:contentDescription="Scroll for Courses">

        <LinearLayout
            android:id="@+id/layout_courses_browse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_marginTop="5dp"
            android:orientation="vertical" />
    </ScrollView>

    <Button
        android:id="@+id/browsemore_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/ubc_lightblue"
        android:text="Browse More Course"
        tools:layout_conversion_absoluteHeight="48dp"
        tools:layout_conversion_absoluteWidth="129dp"
        tools:layout_editor_absoluteX="141dp"
        tools:layout_editor_absoluteY="463dp" />

    <Button
        android:id="@+id/get_back_profile_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/ubc_darkblue"
        android:text="Get My Profile" />

    <!-- filler for BottomNavigationView to stick to bottom of screen-->
    <TextView android:layout_height="0dip"
        android:layout_width="fill_parent"
        android:layout_weight="1" />
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_alignParentBottom="true"
        app:menu="@menu/bottom_navigation_menu" />

</LinearLayout>