<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ProfilePage">

    <TextView
        android:id="@+id/my_profile_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center"
        android:text="@string/my_profile"
        android:textColor="@color/ubc_darkblue"
        android:textSize="34sp" />

    <TextView
        android:id="@+id/textView_displayname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center"
        android:textColor="@color/ubc_darkblue"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView_yearstanding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center"
        android:textColor="@color/ubc_darkblue"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textview_coop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center"
        android:textColor="@color/ubc_darkblue"
        android:textSize="20sp" />

    <Button
        android:id="@+id/find_course_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:backgroundTint="@color/ubc_darkblue"
        android:text="Find Course" />
</LinearLayout>